kubernetes/apps/observability/kromgo/app/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kromgo
  namespace: observability
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: kromgo
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # Allow traffic from ingress (envoy)
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: network
  egress:
    # Allow access to Prometheus
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
          podSelector:
            matchLabels:
